@@ -1,8 +1,12 @@
 #!/usr/bin/perl -w
 
 use strict;
-use lib '../lib';
-use Devel::Size::Report qw(size_report);
+BEGIN
+  {
+  use lib '../lib';
+  chdir 'example' if -d 'example';
+  }
+use Devel::Size::Report qw(report_size);
 
 use IO::File;
 use Math::BigFloat;
@@ -11,20 +15,35 @@ my $a = [ 8, 9, 7, [ 1,2,3, { a => 'b', size => 12.2, h => ['a'] }, 'rrr' ] ];
 
 use Data::Dumper; print Dumper($a);
 
-print size_report($a, { indend => "\t", left => '', total => undef,} ), "\n";
+print report_size($a, { indend => "\t", left => '', total => undef,} ), "\n";
 
-print size_report(Math::BigInt->new(1)),"\n";
-print size_report(Math::BigFloat->new(1)),"\n";
-print size_report(Math::BigFloat->new(1.2)),"\n";
+print report_size(Math::BigInt->new(1)),"\n";
+print report_size(Math::BigFloat->new(1)),"\n";
+print report_size(Math::BigFloat->new(1.2)),"\n";
 
 my $FILE;
-open($FILE, "size.pl") or die ("Cannot open STDIN: $!");
-print size_report( $FILE ), "\n";
+open($FILE, "size.pl") or die ("Cannot open size.pl: $!");
+print report_size( $FILE, { total => '' } ), "\n";
 
-print size_report( IO::File->new() ), "\n";
+print report_size( IO::File->new(), { total => '' } ), "\n";
 
-print size_report( "a scalar" ), "\n";
-print size_report( \"a scalar" ), "\n";
+print report_size( "a scalar", { total => '' } ), "\n";
+print report_size( \"a scalar", {  } ), "\n";
 
-print size_report( sub { 3 < 5 ? 1 : 0; print "123"; 3; }), "\n";
+# these tw0 are actually different in size as Devel::Peek shows:
+my $a = [ 1,2 ];
+print report_size( $a ), "\n";
+my @a = (1,2);
+print report_size( \@a ), "\n";
+
+print report_size( sub { 3 < 5 ? 1 : 0; print "123"; 3; }), "\n";
+my $a = 1; my $code = sub { $a < 5 ? 1 : 0; print "123"; 3; };
+
+print report_size( $code, { total => '' } ), "\n";
+
+my $x = [ 8 ]; my $y = [ $x, [ 1, $x ] ];
+print report_size( $y ), "\n";
+
+my $x = [ 8 ]; my $y = [ $x, [ 1, \8 ] ];
+print report_size( $y ), "\n";
 
