@@ -30,3 +30,8 @@ Revision history for Devel::Size::Report
   * more tests, especially for the addr => 1 feature
   * psize takes options as single-letter abbrev., too
   * added option "class" to optionally show classnames
+2004-10-18 v0.06 Tels 76 tests
+  * fixed example/size.pl - duh!
+  * some small cleanups in comments in Report.pm
+  * amended TODO
+  * scalar references (\0) are now reported with their correct size
